# financial-intelligence-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  latency_breakdown.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  models.py
app/api/: routes.py
app/cache/: __init__.py  cache_manager.py  exact_cache.py  hot_ticker_cache.py  semantic_cache.py
app/connectors/: __init__.py  base.py  market_connector.py  news_connector.py  registry.py  sec_connector.py  sec_parser.py  sync_service.py
app/consistency/: __init__.py  cache_invalidator.py  freshness_scorer.py
app/data/: cold_store.py  data_router.py  hot_store.py
app/embedding/: __init__.py  embedding_service.py
app/inference/: __init__.py  inference_engine.py  ollama_inference_engine.py
app/ingestion/: embedding_worker.py  stream_processor.py
app/observability/: __init__.py  metrics.py
app/resilience/: circuit_breaker.py  degraded_mode.py  timeout_handler.py
app/retrieval/: bm25_retriever.py  reranker.py  retrieval_engine.py  vector_retriever.py
data/: sample_filings.json  sample_news.json  sample_prices.json
docs/: api_documentation.md  architecture.md  architecture_diagram.mmd  benchmark_report.md  deployment_guide.md  resume_ready_summary.md
evaluation/: __init__.py  benchmark_queries.json  freshness_benchmark.py  latency_benchmark.py  retrieval_metrics.py
observability/: prometheus.yml
static/: index.css  index.html
tests/integration/: test_ingestion.py  test_query_pipeline.py  test_startup_health.py
(+21 files in other folders)
