[project]
name = "financial-intelligence-rag"
version = "2.0.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line too long — handled gradually
    "B008",   # function-call-in-default-argument (FastAPI Depends pattern)
    "RUF012", # mutable-class-default (dataclass fields)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:starlette",
    "ignore::DeprecationWarning:pydantic",
]
